Closed Bug 1445614 Opened 8 years ago Closed 8 years ago

SetAlternateDesktop failure should not crash the browser.

Categories

(Core :: Security: Process Sandboxing, defect, P1)

60 Branch
All
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- disabled
firefox60 + fixed
firefox61 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

Crash Data

Attachments

(1 file)

Currently failure to create an alternate desktop will crash the browser. It looks like there are cases where this can legitimately fail and certainly chrome only warns.
Attachment #8958806 - Flags: review?(jmathies)
Attachment #8958806 - Flags: review?(jmathies) → review+
Try push (this time actually calling GetLastError instead of logging its pointer): https://treeherder.mozilla.org/#/jobs?repo=try&revision=816edb8ff6b2ebd7c4d3b5c824564746bc43fe28
Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/159e1105bdc7 Only warn when SetAlternateDesktop fails. r=jimm
Comment on attachment 8958806 [details] [diff] [review] Only warn when SetAlternateDesktop fails Sheriff note: the patch that landed was slightly different to the one attached to the bug. Approval Request Comment [Feature/Bug causing the regression]: Alternate Desktop for content process bug 1441824. [User impact if declined]: Some users will continue to experience crashes like this: https://crash-stats.mozilla.com/search/?moz_crash_reason=~alternate desktop&product=Firefox [Is this code covered by automated tests?]: Many tests go through the child process launch code. [Has the fix been verified in Nightly?]: I don't have STR. [Needs manual test from QE? If yes, steps to reproduce]: No STR, but should be obvious from crash stats. [List of other uplifts needed for the feature/fix]: None [Is the change risky?]: No [Why is the change risky/not risky?]: Trivial change to warn and log instead of crash the browser or not start the child. [String changes made/needed]: None
Attachment #8958806 - Flags: approval-mozilla-beta?
Crash Signature: [@ mozilla::SandboxBroker::SetSecurityLevelForContentProcess]
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Comment on attachment 8958806 [details] [diff] [review] Only warn when SetAlternateDesktop fails windows crash fix for beta60
Attachment #8958806 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: