Bug 1445614: Only warn when SetAlternateDesktop fails. r=jimm a=jcristau

--HG--
extra : source : 159e1105bdc754d0b8e83915bf18fc418167ead6